# buddha-cli

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.ja.md  README.md  README.zh-TW.md  buddha-mcp.sh  daizo-mcp.sh
buddha-cli/: Cargo.toml  build.rs
buddha-cli/src/: main.rs  regex_utils.rs
buddha-cli/src/cmd/: cbeta.rs  common.rs  gretil.rs  jozen.rs  mod.rs  muktabodha.rs  resolve.rs  sarit.rs  sat.rs  tibetan.rs  tipitaka.rs
buddha-core/: Cargo.toml
buddha-core/src/: lib.rs  path_resolver.rs  repo.rs  text_utils.rs
buddha-mcp/: Cargo.toml
buddha-mcp/src/: main.rs  server.rs  unified.rs
daizo-cli/: Cargo.toml
daizo-core/: Cargo.toml
daizo-mcp/: Cargo.toml
daizo-mcp/src/: lib.rs  main.rs  server.rs
docs/: buddha_system_prompt.txt  daizo_system_prompt.txt  mcp-references.md
scripts/: bootstrap.sh  install.sh  link-binaries.sh  release.sh
